<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#e6e6fa"
    android:padding="8dp"
    tools:context=".SubmitComplaintActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/complain_form"
        android:padding="15dp"
        android:gravity="center"
        android:textSize="25sp"
        android:background="#5F8575"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_margin="7dp"
        android:layout_marginBottom="30dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/time" />

            <RadioGroup
                android:id="@+id/radioGroupUrgency"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_anytime"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/anytime"/>

                <RadioButton
                    android:id="@+id/rb_weeks"
                    android:layout_width="144dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/_1_or_2_weeks" />

                <RadioButton
                    android:id="@+id/rb_emergency"
                    android:layout_width="113dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/emergency" />

            </RadioGroup>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="22sp"/>

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="text"/>
        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_your_problem"
            android:textSize="22sp"/>

        <RadioGroup
            android:id="@+id/radioGroupIssue"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center">

            <RadioButton
                android:id="@+id/rb_harassment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="Women harassment"/>
            <RadioButton
                android:id="@+id/rb_security"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="Security issues"/>
            <RadioButton
                android:id="@+id/rb_drug"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="Drug trafficking"/>

        <RadioButton
            android:id="@+id/rb_corruption"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="Corruption"/>
            <RadioButton
                android:id="@+id/rb_others"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="Others"/>
    </RadioGroup>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="The problem details: "
            android:textSize="22sp"/>

        <EditText
            android:id="@+id/etProblemFaced"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="text"/>
    </LinearLayout>
    </LinearLayout>






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/black">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/btnHome"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="Home"
                    android:background="#5F8575"
                    android:textSize="22sp"
                    android:clickable="true"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:visibility="invisible">

        </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:background="@color/black">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <TextView
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="Submit"
            android:background="#5F8575"
            android:textSize="22sp"
            android:clickable="true"/>
</LinearLayout>
</LinearLayout>


    </LinearLayout>





</LinearLayout>